<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="image_logo">image logo</string>
    <string name="start">START</string>
    <string name="get_ready_for">Get Ready For</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="upcoming_exercise">Upcoming Exercise:</string>
    <string name="image">image</string>
    <string name="are_you_sure">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="are_you_sure_question">Are you sure?</string>
</resources>